--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "elysia": "latest"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.2.1",
     "bun-types": "latest"
   },
   "module": "src/index.js"
